--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
             <i class="fas fa-utensils"></i> Soto Ayam Rajawali Bu Mar
         </a>
         <br><br>
-        <i class="fas fa-map-marker-alt"></i> Jl. Rajawali No.120, Karang Pacar, Kec. Bojonegoro, Kabupaten Bojonegoro, Jawa Timur 62116
+        <p><i class="fas fa-map-marker-alt"></i> Jl. Rajawali No.120, Bojonegoro</p>
     </div>
     <div style="margin-top: 20px;">
         <iframe 
@@ -248,7 +248,7 @@
         width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
         </iframe>
     </div>
-        <p><i class="fas fa-map-marker-alt"></i> Jalan Mastrip No. 38 Kauman, Ledok Kulon Tiga, Ledok Wetan, Kec. Bojonegoro, Kabupaten Bojonegoro, Jawa Timur 62113</p>
+        <p><i class="fas fa-map-marker-alt"></i> Jalan Mastrip No. 38, Bojonegoro</p>
     <div style="margin-top: 20px;"></div>
         <iframe 
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3958.8074916762994!2d111.87353869678951!3d-7.1482453999999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e77821e4ac0a3ed%3A0x928604f706e2032!2sSoto%20Ayam%20Rajawali%20Bu%20Mar!5e0!3m2!1sid!2sid!4v1727755250474!5m2!1sid!2sid" 
